# local_whisper_mic

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  run.command  run.sh  transcribe_mic.py
